crates/frust-tui/tests/snapshots/snapshots__session_log_scrolled_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │   12:00:00 [app]       Compiling huddle v0.1.0                           
                         │   12:00:01 [app]        Finished dev profile                             
 DEVICES ↻ R             │   12:00:02 [app]         Running `target/debug/huddle`                   
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   huddle                │                                                                          
   ▸ ▶ desktop           │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · i            │                                                                          
   Build · b             │                                                                          
   Clean                 │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │‖ scrolled  ·  wrap:off   x stop · f follow · w wrap · / search · l filter
● 1 running  │  o run · b build · d devtools · ⌘ palette · ? help                          [mouse ✓]
