crates/frust-tui/tests/snapshots/snapshots__session_perf_data_present_but_panel_closed_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │   12:00:01 [frust]  frust-perf frame n=1 total_p50_ms=8 total_p95_ms=14 t
                         │                                                                          
 DEVICES ↻ r             │                                                                          
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   huddle                │                                                                          
   ▸ ▶ desktop           │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │● follow  ·  wrap:off     x stop · f follow · w wrap · / search · l filter
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help                            [mouse ✓]
