crates/frust-tui/tests/snapshots/snapshots__session_perf_panel_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │   12:00:22 [frust]  frust-perf raw n=20 total_us=2740 rebuild_us=200 layo
                         │   12:00:23 [frust]  frust-perf raw n=21 total_us=2777 rebuild_us=200 layo
 DEVICES ↻ r             │   12:00:24 [frust]  frust-perf raw n=22 total_us=2814 rebuild_us=200 layo
   none found            │   12:00:25 [frust]  frust-perf raw n=23 total_us=2851 rebuild_us=200 layo
                         │   12:00:26 [frust]  frust-perf raw n=24 total_us=2888 rebuild_us=200 layo
 SESSIONS                │   12:00:27 [frust]  frust-perf raw n=25 total_us=2925 rebuild_us=200 layo
   huddle                │   12:00:28 [frust]  frust-perf raw n=26 total_us=2962 rebuild_us=200 layo
   ▸ ▶ desktop           │   12:00:29 [frust]  frust-perf raw n=27 total_us=2999 rebuild_us=200 layo
                         │   12:00:30 [frust]  frust-perf raw n=28 total_us=3036 rebuild_us=200 layo
 ACTIONS                 │   12:00:31 [frust]  frust-perf raw n=29 total_us=3073 rebuild_us=200 layo
   New project · n       │   12:00:32 [frust]  frust-perf raw n=30 total_us=3110 rebuild_us=200 layo
   Add plugin · a        │   12:00:33 [frust]  frust-perf raw n=31 total_us=3147 rebuild_us=200 layo
   Doctor · d            │   12:00:34 [frust]  frust-perf raw n=32 total_us=3184 rebuild_us=200 layo
   Build · b             │   12:00:35 [frust]  frust-perf raw n=33 total_us=3221 rebuild_us=200 layo
   Clean · c             │   12:00:36 [frust]  frust-perf raw n=34 total_us=3258 rebuild_us=200 layo
   MCP off · M           │   12:00:37 [frust]  frust-perf raw n=35 total_us=3295 rebuild_us=200 layo
   DAP off · D           │   12:00:38 [frust]  frust-perf raw n=36 total_us=3332 rebuild_us=200 layo
                         │   12:00:39 [frust]  frust-perf raw n=37 total_us=3369 rebuild_us=200 layo
                         │   12:00:40 [frust]  frust-perf raw n=38 total_us=3406 rebuild_us=200 layo
                         │   12:00:41 [frust]  frust-perf raw n=39 total_us=3443 rebuild_us=200 layo
                         │   12:00:42 [frust]  frust-perf frame n=40 total_p50_ms=8 total_p95_ms=14█
                         │● follow  ·  wrap:off     x stop · f follow · w wrap · / search · l filter
                         │  ▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▆▆▆▆▆▆▆▆▆▆▆▆▇▇▇▇▇▇▇▇▇▇▇█                                
                         │  perf n=40 p50=8ms p95=14ms p99=22ms skipped=0 total_frames=40           
                         │  startup: app_created=2ms first_frame_presented=45ms                     
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help                            [mouse ✓]
