crates/frust-tui/tests/snapshots/snapshots__session_tabs_grouped_120x36.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(120, 36, &multi_session_state())"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                                         ▶ Run    ⚒ Build 
━━━━━━━━                                                                                                                
                                                                                                                        
 PROJECTS                │huddle:  1 ▶ desktop   2 ⠋ Pixel 7    bubblebench:  3 ✗ desktop                               
  ▸ huddle               │ ⠋ Building…                                                                                  
    bubblebench          │   12:00:00 [app]    Building it.f0x.huddle…                                                  
                         │                                                                                              
 DEVICES ↻ R             │                                                                                              
   none found            │                                                                                              
                         │                                                                                              
 SESSIONS                │                                                                                              
   huddle                │                                                                                              
     ▶ desktop           │                                                                                              
   ▸ ⠋ Pixel 7           │                                                                                              
   bubblebench           │                                                                                              
     ✗ desktop           │                                                                                              
                         │                                                                                              
 ACTIONS                 │                                                                                              
   New project · n       │                                                                                              
   Add plugin · a        │                                                                                              
   Doctor · i            │                                                                                              
   Build · b             │                                                                                              
   Clean                 │                                                                                              
   MCP off · M           │                                                                                              
   DAP off · D           │                                                                                              
                         │                                                                                              
                         │                                                                                              
                         │                                                                                              
                         │                                                                                              
                         │                                                                                              
                         │                                                                                              
                         │                                                                                              
                         │                                                                                              
                         │                                                                                              
                         │● follow  ·  wrap:off                         x stop · f follow · w wrap · / search · l filter
● 2 running  │  o run · b build · d devtools · ⌘ palette · ? help                                              [mouse ✓]
