crates/frust-tui/tests/snapshots/snapshots__titlebar_chip_ok_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ✓ toolchain                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ r             │                                                                          
   none found            │  No session running — start a run to open a log tab here.                
                         │                                                                          
 SESSIONS                │                                                                          
   none running          │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
