crates/frust-tui/tests/snapshots/snapshots__too_small_terminal_40x10.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(40, 10, &state)"
---
                                        
                                        
                                        
           Terminal too small           
                                        
        Resize to at least 60×18
